infrastructure/controllers/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    shared-gateway-access: "true"
    application-service: "true"
