infrastructure/controllers/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homecluster-gateway
  namespace: default
  labels:
    app.kubernetes.io/name: homecluster-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    # Should match hostname with "<application-name>.hcga.cluster"
    # NOTE: 'hcga' stands for 'Home cluster gateway access'
    hostname: "*.hcga.cluster"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
            application-service: "true"
